--- a/src/nav_launch/config/nav_params_sim.yaml
+++ b/src/nav_launch/config/nav_params_sim.yaml
@@ -8,7 +8,7 @@ bt_navigator:
     action_server_result_timeout: 300 # s
     transform_tolerance: 0.2 # s
     global_frame: map
-    robot_base_frame: base_link
+    robot_base_frame: base_footprint
     odom_topic: /odom
     use_sim_time: True
     bond_heartbeat_period: 0.2
@@ -80,7 +80,7 @@ local_costmap:
       always_send_full_costmap: False
       footprint_padding: 0.05 # cm
       global_frame: map
-      robot_base_frame: base_link
+      robot_base_frame: base_footprint
       footprint: "[
         [0.326, 0.971],   
         [0.326, -0.971],  
@@ -117,7 +117,7 @@ local_costmap:
         combination_method: 1
         observation_sources: scan
         scan:
-          topic: /scan
+          topic: /points_raw
           data_type: "LaserScan"
           min_obstacle_height: -5.0
           max_obstacle_height: 5.0
@@ -154,7 +154,7 @@ global_costmap:
       update_frequency: 1.0
       publish_frequency: 1.0 
       global_frame: map
-      robot_base_frame: base_link
+      robot_base_frame: base_footprint
       robot_radius: 0.22
       resolution: 0.05
       plugins: ["obstacle_layer", "denoise_layer", "inflation_layer"]
@@ -167,7 +167,7 @@ global_costmap:
         max_obstacle_height: 2.0
         combination_method: 1
         scan:
-          topic: /scan
+          topic: /points_raw
           obstacle_max_range: 2.5
           obstacle_min_range: 0.0
           raytrace_max_range: 3.0
@@ -341,7 +341,7 @@ behavior_server:
     assisted_teleop:
       plugin: "nav2_behaviors/AssistedTeleop"
     global_frame: odom
-    robot_base_frame: base_link
+    robot_base_frame: base_footprint
     transform_tolerance: 0.1
     use_sim_time: true
     simulate_ahead_time: 2.0
@@ -370,7 +370,7 @@ velocity_smoother:
     min_velocity: [-0.26, 0.0, -1.0]
     max_accel: [2.5, 0.0, 3.2]
     max_decel: [-2.5, 0.0, -3.2]
-    odom_topic: "/T265/pose"
+    odom_topic: "/odom"
     odom_duration: 0.1
     deadband_velocity: [0.0, 0.0, 0.0]
     velocity_timeout: 1.0
