Fixed nav params

--- a/src/nav_launch/config/nav_params_sim.yaml
+++ b/src/nav_launch/config/nav_params_sim.yaml
@@ -9,7 +9,7 @@ bt_navigator:
     transform_tolerance: 0.2 # s
     global_frame: map
     robot_base_frame: base_footprint
-    odom_topic: /odom
+    odom_topic: /lio/odometry
     use_sim_time: True
     bond_heartbeat_period: 0.2
     # 'default_nav_through_poses_bt_xml' and 'default_nav_to_pose_bt_xml' are use defaults:
@@ -370,7 +370,7 @@ velocity_smoother:
     min_velocity: [-0.26, 0.0, -1.0]
     max_accel: [2.5, 0.0, 3.2]
     max_decel: [-2.5, 0.0, -3.2]
-    odom_topic: "/odom"
+    odom_topic: "/lio/odometry"
     odom_duration: 0.1
     deadband_velocity: [0.0, 0.0, 0.0]
     velocity_timeout: 1.0
